style.css
/* Navbar Section */
#header {
    font-size: 20px;
    color: white;
    background-color: #F5302A;
    
  }
  
  #header h1 {
    font-size: 64px;
    font-weight: 900;
  }
  
  #header p {
    margin-top: 48px;
    font-weight: 600;
  }

  #header p a{
      text-decoration: none;
      color: white;
      font-weight: 400;
      font-size: 18px;
  }
  
  #header .date {
    font-weight: 400;
    font-size: 14px;
    color: white;
  }
  
  
  span.button {
    padding: 8px;
    margin-left: 6px;
    background-color: white;
    color: #F5302A;
  }

#navbar-2{
    border-bottom: solid 2px rgb(245, 245, 245);
    padding-bottom: 5px;

}

#navbar-2 a{
    color: black;
    font-size: 18px;
    font-weight: bolder;
    border-right: solid 1px lightgray;
    padding-right: 20px;
}

#navbar-2 a:hover{
    color: red;
}

#navbar-2 #search{
    color: rgb(102, 102, 102);
    font-weight: normal;
    font-size: 18px;
    border: none;
}

#smaller-screen-nav{
    background-color: #F5302A;
}

.sign-small{
    color: white;
}
.brand-small{
    color: white;
}

.submenu{
    color: white;
}



/* Main Section */
.resize-1{
    width: 100%;
    padding-bottom: 10px;
}
.resize-11{
    width: 100%;
    padding-top: 15px;
    padding-bottom: 10px;
}

.resize-2{
    width: 100%;
    padding-bottom: 10px;
}

.resize-3{
    height: 63px;
    max-width: 63px;
}
.resize-latest{
    width: 100%;
}


a{
    text-decoration: none;
}

.remove{
    padding: 0;
}

.resize-image{
    width: 100%;
    height: 220px;
    padding-bottom: 15px;
}
.resize-image-3{
    width: 100%;
    height: 200px;
    padding-bottom: 10px;
}
.resize-slideshow{
    width: 100%;
    height: 250px;
    padding-bottom: 15px;
}
.us-section-divide{
    padding-bottom: 5px;
    border-bottom: solid 1px lightgray;
}
.us-section-divide-1{
    padding-bottom: 5px;
    padding-top: 5px;
    border-bottom: solid 1px lightgray;
}

#test-image{
    padding-bottom: 20px;
    padding-top: 20px;
    padding-left: 10px;
}
#test-image-2{
    padding-left: 10px;
    padding-top: 10px;

}

.card-text-1{
    font-size: 14px;
}

#row-border{
    border-bottom: solid 1px lightgray;
}
.subscriber-button{
    background-color: red;
    color: white;
}
#padding-button{
    padding-bottom: 20px;
}

.border-seperator{
    padding:10px 0;
    border-bottom: 1px solid lightgrey;
}
#borderless-seperator{
    padding-top: 10px;
}

.ending-border{
    padding-bottom: 50px;
    border-bottom: solid 3px rgb(245, 245, 245);
}
#align-icons{
    padding-top: 10px;
}
.icon-change{
    padding-right: 5px;
    
}
.icon-change img{
    height: 20px;
}
.footer-1{
    padding: 20px 0 20px 0;
    border-bottom: solid 1px rgb(217, 217, 217);
}
.footer-anchor{
    text-decoration: none;
    color: rgb(122, 122, 122);
    font-size: 14px;
    padding-right: 10px;
    border-right: 1px solid rgb(122,122,122);
}

.footer-anchor:hover{
    color: black;
    text-decoration: none;
}
.footer-2{
    padding: 20px 0 30px 0;
}

/* Section 1 CSS Here */
.content{
    padding: 20px 0 0 0;
}

.more-stories{
    position: sticky;
    top: 0;
}

.section-title{
    color: rgb(154, 154, 154);
    padding-bottom:10px;
}
.featured-headline{
    color: black;
    font-size:20px;
    font-weight:bold;
    padding: 5px 0 5px 0;
    line-height: 1.2;
}
.featured-description{
    font-size:14px;
    color: rgb(51,51,51);
    line-height:1.1;
    padding-top: 5px;
}
.mini-headline{
    text-decoration: none;
    color: black;
    font-weight: bold;
    padding: 5px 0 5px 0;
    border-top: solid 1px lightgrey;
    border-bottom: solid 1px lightgrey;
}
.mini-headline:hover{
    color: red;
    text-decoration: none;
}

.top-story-headline{
    color: black;
    font-weight: bold;
    font-size: 22px;
    line-height: 1.2;
}
.top-story-mini{
    color: black;
    font-weight: bold;
    
}
#section-padding{
    padding: 15px 0; 
    border-top: solid 1px lightgrey;
    border-bottom: solid 1px lightgrey;
}
.top-story-2{
    padding-top: 5px;
    padding-bottom: 10px;
    border-bottom: solid 1px lightgrey;
}

.latest-headline{
    color: black;
    font-weight: bold;
    font-size: 16px;
    line-height: 1.2;
    padding-bottom: 0;
}
.top-description{
    font-size:14px;
    color: rgb(51,51,51);
    line-height:1.1;
    padding-top: 0px;
}

.top-story-row{
    padding: 10px 0 10px 0;
    border-bottom: solid 1px lightgrey;
}

#top-last{
    padding-top: 10px;
}

.opinion-headline{
    color: black;
    font-weight: bold;
    font-size: 16px;
    line-height: 1.1;
    margin-bottom: 5px;
    
}

.opinion-byline{
    color: rgb(85, 85, 85);
    font-weight: bold;
    font-size: 12px;


}

.opinion-border{
    padding-top: 8px;
    padding-bottom: 3px;
    border-bottom: 1px solid lightgrey;
}

.last-opinion{
    padding-top: 8px;
    margin-bottom: 20px;
}

.latest-row{
    border-bottom: 1px solid lightgrey;
    padding: 10px 0;
}

.latest-last{
    padding: 10px 0;
    margin-bottom: 20px;
}

.elton-special{
    margin-bottom: 30px;
}

.sign-up-card{
    width: 300px;
    margin-left: 25px;
}
.sign-up-card span{
    font-weight: bold;
    color: rgb(54, 54, 54);
    font-size: 16px;
}
.sign-up-card button{
    color: white;
    background-color: rgb(102, 102, 102);
    margin: 10px 0 10px 0; 
    font-weight: 500;
}

.sign-up-card a{
    text-decoration: none;
    color: rgb(54, 54, 54);
    font-size: 14px;
    font-weight: bold;
}

/* Section 2 CSS Starts Here */

.section-2{
    margin-top: 30px;
}

.magazine-title{
    padding-left: 10px;
    font-weight: bold;
    font-size: 18px;
    color: rgb(51,51,51);
}

.magazine-row-1{
    margin-top: 15px;
    border-top: solid 1px lightgrey;
    padding-top: 10px;
}

.resize-magazine{
    width: 100%;
}

.feature-text{
    color: black;
    font-weight: bold;
    font-size: 18px;
    padding: 0 0 0 60px;
    background-color: rgb(245, 245, 245);
    height: 35px;
}
.tag{
    background-color: red;
    color: white;
    font-size: 14px;
    font-weight: 500;
    padding: 5px;

}
.tag-2{
    color: red;
    padding-left: 5px;
    font-size: 14px;
    font-weight: bold;

}

.section-2-font{
    color: black;
    text-decoration: none;
    font-weight: bold;
    font-size: 18px;
    line-height: 1.3;
    
}
.padding-headline{
    padding-top: 10px;
}

/* Section 3 CSS Starts Here */
.section-3{
    margin-top: 20px;
}

.editors-row-1{
    padding-top: 20px;
    border-top: 1px solid lightgrey;
}
.section-3 div:nth-child(1){
    padding-bottom: 10px;
}
.section-3-headline{
    color: black;
    text-decoration: none;
    font-weight: bold;
    line-height: 1.2;
    font-size: 18px;
}
.section-3-headline:hover{
    color: black;
    text-decoration: underline;
    text-decoration-color: red;
}

/* Section 4 CSS Starts Here  */
.section-4{
    margin-top: 20px;
}

.section-4 div:nth-child(1){
    padding-bottom: 10px;
}

.slideshow-row-1{
    padding-top: 20px;
    border-top: 1px solid lightgrey;
}
.slideshow-row-2{
    padding-bottom: 20px;
    border-bottom: 1px solid lightgrey;
}
.slideshow-headline{
    color: black;
    text-decoration: none;
    font-size: 18px;
    font-weight: bold;
    line-height: 1.2;
}

.slideshow-headline:hover{
    color: black;
    text-decoration: underline;
    text-decoration-color: red;
}

/* Section 5 CSS Starts Here */

.section-5{
    margin-top: 20px;
}

.general-header{
    color: red;
    font-weight: bold;
    font-size: 20px;
    padding-bottom: 10px;
}

.section-divide-healine{
    color: black;
    text-decoration: none;
    font-weight: bold;
    font-size: 16px;
}
.section-divide-healine:hover{
    text-decoration: none;
    color: red;
}

.section-divide-last{
    padding-top: 5px;
}

.row-divider{
    padding-bottom: 20px;
    border-bottom: 1px solid lightgrey;
}

/* Section margins added here */


.section-6{
    margin-top: 20px;
}
.section-7{
    margin-top: 20px;
}
.section-8{
    margin-top: 20px;
}
.section-9{
    margin-top: 20px;
}
.section-10{
    margin-top: 20px;
    margin-bottom: 50px;
}

/* SUBSCRIBE SECTION STYLING HERE */
.subscribe-header{
    color: red;
    font-weight: bold;
    padding-bottom: 10px;

}

.subscribe-header-2{
    color: rgb(71, 184, 248);
    font-weight: bold;
    padding-bottom: 10px;

}

.subscribe-header-3{
    color: rgb(51, 51, 51);
    font-weight: bold;
    padding-bottom: 10px;
    border-bottom: solid 1px lightgrey;

}

.responsive-image{
    max-width: 100%;
    height: 80px;
}

/* Media Queries  */

@media only screen and (max-width: 991px){
    #navbar-2{
        display: none;
    }
    #header{
        display: none;
    }
    #testing-card{
        
    }
}

@media only screen and (min-width: 991px){
    #smaller-screen-nav{
        display: none;
    }
}

